# ocaml-bitcoin

./: .gitignore  .gitmodules  .ocamlformat  .travis.yml  CHANGES  LICENSE.md  bitcoin-node.opam  bitcoin.opam  common.ml  common.mli  dune-project  jbuild  p2p.ml  p2p.mli  protocol.ml  protocol.mli  util.ml  util.mli
async/: dune  jbuild  node.ml
cstruct/: bitcoin_cstruct.ml  dune  jbuild
lib/: block.ml  dune  header.ml  header.mli  merkle.ml  outpoint.ml  outpoint.mli  p2p.mli  script.mli  transaction.mli  txout.mli  util.ml  util.mli  wallet.ml
src/: block.mli  bloom.ml  bloom.mli  dune  jbuild  merkle.ml  merkle.mli  p2p.ml  p2p.mli  protocol.ml  protocol.mli  script.ml  script.mli  transaction.ml  txin.ml  txin.mli  txout.ml  util.ml  util.mli  wallet.ml  wallet.mli
test/: dune  jbuild  test.ml
