opam-version: "2.0"
name: "bitcoin"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-bitcoin"
bug-reports: "https://github.com/vbmithr/ocaml-bitcoin/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-bitcoin"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.3.1"}
  "base" {>= "v0.13.1"}
  "stdint" {>= "0.6.0"}
  "ipaddr" {>= "4.0.0"}
  "ptime" {>= "0.8.5"}
  "cstruct" {>= "5.1.1"}
  "digestif" {>= "0.8.0-1"}
  "hex" {>= "1.4.0"}
  "bitv" {>= "1.3"}
  "secp256k1-internal" {>= "0.1.0"}
  "murmur3"
  "base58"
]
pin-depends: [
  ["murmur3.dev" "git+https://github.com/vbmithr/ocaml-murmur3.git"]
  ["base58.dev" "git+https://github.com/vbmithr/ocaml-base58.git"]
]
synopsis:"Bitcoin library for OCaml"
description:"""This library implements Bitcoin protocol
datastructures, script, etc."""

