(library
 (name bitcoin)
 (public_name bitcoin)
 (preprocess (pps ppx_sexp_conv))
 (modules util protocol script wallet)
 (libraries
   cstruct-sexp
   sexplib
   rresult
   bitcoin_cstruct
   astring
   stdint
   ocplib-endian
   ipaddr
   ptime
   ptime.clock.os
   cstruct
   hex
   bitv
   murmur3
   digestif.c
   secp256k1
   base58))
