(library
 (name bitcoin)
 (public_name bitcoin)
 (preprocess (pps ppx_sexp_conv))
 (modules util protocol script wallet bloom p2p)
 (libraries
   fmt
   cstruct-sexp
   sexplib
   rresult
   bitcoin_cstruct
   astring
   stdint
   ocplib-endian
   ipaddr
   ipaddr-sexp
   ptime
   ptime.clock.os
   cstruct
   hex
   bitv
   murmur3
   digestif.c
   secp256k1-internal
   base58))
